# talos-homelab

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  .mcp.json  .prettierignore  .shellcheckrc  .starship.toml  .yamllint.yaml  2026-01-02.md  2imnrpiqbchvihei5sihdrpicr95egfo.darc  Brewfile  CLAUDE.md  CONTRIBUTING.md  DAH_REPORT.md  DOLT_REMOTE.md  Dockerfile  IMPLEMENTATION-TRACKER.md  Makefile  OBSERVABILITY.md  QUICKSTART.md  README-DNS.md  README.md  RETRO-GPU-2025-12-19.md  SKILLZ.md  TODO.md  TRAEFIK.md  Taskfile.dev.yaml  Taskfile.infra.yaml  Taskfile.k8s.yaml  Taskfile.talos.yaml  Taskfile.yaml  Tiltfile  beads-index.md  catalyst_repo.yaml  dashboard.sh  go.mod  (+5 more)
.beads/: .gitignore  beads.left.jsonl  beads.left.meta.json  config.yaml  deletions.jsonl  issues.jsonl  last-touched  metadata.json  sync_base.jsonl
.playwright-mcp/: page-2026-04-12T16-27-14-305Z.yml  page-2026-04-12T19-11-43-967Z.yml  page-2026-04-12T19-16-19-825Z.yml  page-2026-04-12T21-35-40-476Z.yml  page-2026-04-12T22-34-26-014Z.yml  page-2026-04-12T22-40-49-503Z.yml  page-2026-04-13T01-57-49-976Z.yml  page-2026-04-13T01-58-00-580Z.yml  page-2026-04-13T02-03-55-428Z.yml  page-2026-04-13T02-09-16-216Z.yml  page-2026-04-14T23-25-43-136Z.yml  page-2026-04-14T23-25-58-960Z.yml  page-2026-04-14T23-54-29-183Z.yml  page-2026-04-15T00-08-28-154Z.yml  page-2026-04-15T00-08-54-988Z.yml  player-snapshot.yml
.scratch/: gitleaks-remediation.md
applications/: @private
applications/congress-data/: .gitignore  Dockerfile  README.md  Tiltfile  dashboard.sh  pyproject.toml
applications/congress-data/k8s/: deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
applications/congress-data/src/congress_data/: __init__.py  client.py  config.py  entities.py
applications/congress-data/src/congress_data/assets/: __init__.py  documents.py  embeddings.py  entities_ner.py  extraction.py  graph.py  propositions.py
applications/congress-data/src/congress_data/core/: __init__.py  base_api_client.py  base_entity.py  document.py
applications/dagster-io/: pyproject.toml
applications/dagster-io/src/dagster_io/: __init__.py  io_manager.py  manifest.py  path_builder.py  s3_client.py  serializers.py
applications/media-ingest/: Dockerfile  pyproject.toml
applications/media-ingest/k8s/: deployment.yaml  kustomization.yaml  namespace.yaml  nfs-volumes.yaml  service.yaml
applications/media-ingest/src/media_ingest/: __init__.py  config.py
applications/media-ingest/src/media_ingest/assets/: __init__.py  discovery.py  documents.py  embeddings.py  metadata.py  transcription.py
applications/open-leaks/: Dockerfile  README.md  pyproject.toml
applications/open-leaks/k8s/: deployment.yaml  externalsecret.yaml  kustomization.yaml  namespace.yaml  service.yaml
applications/open-leaks/src/open_leaks/: __init__.py  config.py  entities.py  llm.py
applications/open-leaks/src/open_leaks/assets/: __init__.py  documents.py  embeddings.py  entities_ner.py  extraction.py  graph.py  propositions.py
applications/open-leaks/src/open_leaks/core/: document.py
applications/scratch/dagster-congress/src/: definitions.py  pyproject.toml
applications/scratch/dagster-congress/src/domains/: __init__.py
applications/scratch/dagster-congress/src/graphql/: Dockerfile
applications/scratch/dagster-congress/src/graphql/src/schema/: introspect.ts
applications/scratch/dagster-congress/src/grpc/: __init__.py  server.py
applications/scratch/dagster-congress/src/grpc/proto/: knowledge_graph.proto
applications/scratch/dagster-congress/src/resources/: neo4j_resource.py  s3_resource.py
applications/scratch/dagster-congress/src/schema/generators/: grpc_proto.py
applications/scratch/dagster-congress/src/shared/: base_entity_extractor.py  base_graph_loader.py  embedding_service.py
applications/scratch/dagster-congress/src/shared/models/: __init__.py
applications/the-corpus/corpus-core/: README.md  pyproject.toml
applications/the-corpus/corpus-core/src/corpus_core/: __init__.py  utils.py
applications/the-corpus/corpus-core/src/corpus_core/clients/: __init__.py  base_client.py
applications/the-corpus/corpus-core/src/corpus_core/extractors/: __init__.py  base_extractor.py
applications/the-corpus/corpus-core/src/corpus_core/loaders/: __init__.py  neo4j_loader.py  parquet_loader.py
applications/the-corpus/corpus-core/src/corpus_core/models/: __init__.py  document.py  entity.py
applications/the-corpus/corpus-core/src/corpus_core/schema/: __init__.py  ontology.py
applications/the-corpus/corpus-core/src/corpus_core/schema/generators/: __init__.py  jsonld_context.py  neo4j_schema.py
applications/the-corpus/pipelines/: Dockerfile  README.md  Tiltfile.dev  pyproject.toml
applications/the-corpus/pipelines/k8s/dev/: configmap.yaml  dagster.yaml  kustomization.yaml  pipelines.yaml  postgres.yaml
applications/the-corpus/pipelines/src/: __init__.py  cli.py  definitions.py
applications/the-corpus/pipelines/src/domains/: __init__.py
applications/the-corpus/pipelines/src/domains/congress/: __init__.py  assets.py  client.py  entities.py
applications/the-corpus/pipelines/src/domains/edgar/: __init__.py  assets.py  client.py  entities.py
applications/the-corpus/pipelines/src/domains/reddit/: __init__.py  assets.py  entities.py  loader.py
applications/the-corpus/pipelines/src/resources/: __init__.py
catalyst-dns-sync/: QUICKSTART.md  README.md
configs/: README.md  TALOS.md  cilium-manifest-kp.yaml  cilium-manifest.yaml  cilium-values.yaml  worker-talos01.yaml
docs/: DUAL-GITOPS-ARCHITECTURE.md  DUAL-GITOPS.md  ENHANCEMENT-ROADMAP.md  FLUX-MIGRATION-ASSESSMENT.md  HYBRID-CLOUD-PLAYBOOK.md  INDEX.md  LOCAL-TESTING.md  OBSERVABILITY.md  RESOURCE-OPTIMIZATION.md  TALOS-PROVISIONING-STEPS.md  TILT-PREFLIGHT-CHECK.md  (+18 more)
tools/stack-dashboard/: README.md  pyproject.toml
tools/stack-dashboard/configs/: arr-stack.yaml
tools/stack-dashboard/src/stack_dashboard/: __init__.py  app.py  cli.py  credentials.py  k8s.py  models.py  widgets.py
(+1459 files in other folders)
