[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagster-io"
version = "0.2.0"
description = "Shared S3/MinIO IO manager for Dagster pipelines"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9",
    "boto3>=1.34",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_io"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
