[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-leaks"
version = "0.1.0"
description = "Open-source leaked documents pipeline — Dagster code location"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9",
    "dagster-k8s>=0.25",
    "dagster-postgres>=0.25",
    "dagster-io",
    "pydantic>=2.0",
    "requests>=2.31",
    "httpx>=0.27",
    "openai>=1.0",
    "pymupdf>=1.24",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.9",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/open_leaks"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
