[project]
name = "corpus-core"
version = "0.1.0"
description = "Shared ETL infrastructure for the-corpus NER training data pipeline"
requires-python = ">=3.11"
dependencies = [
    # HTTP client
    "httpx>=0.27.0",

    # Data validation
    "pydantic>=2.9.0",

    # Retry logic
    "tenacity>=9.0.0",

    # Graph database
    "neo4j>=5.25.0",

    # Parquet support
    "pyarrow>=14.0.0",

    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
llm = [
    # LLM / Embeddings (optional - only needed for entity extraction)
    "ollama>=0.4.0",
    "numpy>=1.26.0",
]

dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corpus_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
