[project]
name = "corpus-pipelines"
version = "0.1.0"
description = "Dagster ETL pipelines for the-corpus NER training data"
requires-python = ">=3.11"
dependencies = [
    # Core library
    "corpus-core",

    # Dagster
    "dagster>=1.9.0",
    "dagster-k8s>=0.25.0",
    "dagster-aws>=0.25.0",  # S3 IO manager

    # Data processing
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",

    # HuggingFace datasets (for Reddit)
    "datasets>=3.0.0",

    # LLM support
    "ollama>=0.4.0",
    "numpy>=1.26.0",

    # Observability
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "dagster-webserver>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.dagster]
module_name = "definitions"
working_directory = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
