[project]
name = "dagster-congress"
version = "0.1.0"
description = "Congress.gov ETL Pipeline with Knowledge Graph"
requires-python = ">=3.11"
dependencies = [
    # Dagster core
    "dagster>=1.9.0",
    "dagster-k8s>=0.25.0",
    "dagster-aws>=0.25.0",  # S3 IO manager

    # Data processing
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",

    # Graph database
    "neo4j>=5.25.0",

    # LLM / Embeddings
    "ollama>=0.4.0",
    "numpy>=1.26.0",

    # gRPC
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.29.0",

    # Observability
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "domains", "grpc", "schema", "resources"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
